# base_fastapi_app

./: README.md  pyproject.toml
